<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    tools:context=".MyProfileActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/MyProfileButton"
            android:id="@+id/myProfile"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/mySessions" />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/CurrentBidsButton"
            android:id="@+id/currentBids"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/availibleSessions" />


        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/AvailableSessionsButton"
            android:id="@+id/availibleSessions"
            android:layout_alignBottom="@+id/currentBids"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/MySessionsButton"
            android:id="@+id/mySessions"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/currentBids" />



    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/UsernameField"
        android:id="@+id/username"
        android:layout_weight="0.10" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/EmailField"
        android:id="@+id/email"
        android:layout_weight="0.10" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/PhoneField"
        android:id="@+id/phone"
        android:layout_weight="0.10" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/EditButton"
        android:id="@+id/editProfile"
        android:layout_weight="0.07" />
</LinearLayout>