<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal">

        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:text="@string/AvailableSessionsButton"
            android:id="@+id/availableSessions" />

        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:text="@string/CurrentBidsButton"
            android:id="@+id/currentBids" />

        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:text="@string/MySessionsButton"
            android:id="@+id/mySessions" />

        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:text="@string/MyProfileButton"
            android:id="@+id/myProfile" />

    </LinearLayout>
</FrameLayout>