<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back"
        android:id="@+id/upcomingOneBackButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/titleBody"
        android:id="@+id/upcomingOneTitleBody" />


    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/DescriptionField"
        android:id="@+id/upcomingOneDescriptionBody" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/PostedByField"
        android:id="@+id/upcomingOnePostedByBody" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EmailField"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/upcomingOneBodyEmail" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/PhoneField"
        android:id="@+id/upcomingOneBodyPhone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/StatusField"
        android:id="@+id/upcomingOneBodyStatus"
        android:layout_gravity="center_horizontal" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/upcomingOneSessionImage"
        android:layout_weight=".75" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Rate Tutor"
        android:id="@+id/rateTutorButton" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


    </RelativeLayout>



</LinearLayout>