<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MySessionsButton"
            android:id="@+id/allSessionsButton" />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="100dp"
            android:text="Map"
            android:id="@+id/mapButton"
            android:layout_alignParentRight="true"

            />


    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/titleBody" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/descriptionBody" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/PostedByField"
        android:id="@+id/postedByBody" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EmailField"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/bodyEmail" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/PhoneField"
        android:id="@+id/bodyPhone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/StatusField"
        android:id="@+id/bodyStatus"
        android:layout_gravity="center_horizontal" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sessionImage"
        android:layout_weight=".75" />

    <RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"

        android:text="@string/ViewBidsField"
        android:id="@+id/viewBidsButton" />


    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="false"
        android:text="@string/EditButton"
        android:id="@+id/editButton"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/deleteButton"
        android:layout_toStartOf="@+id/deleteButton" />


    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/DeleteButton"
        android:id="@+id/deleteButton"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/repostButton"
        android:layout_toStartOf="@+id/repostButton" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Repost"
            android:id="@+id/repostButton"
            android:layout_gravity="right"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>



</LinearLayout>