<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation = "vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/saveNewSession" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textAlignment="center"
        android:textSize="25dp"
        android:textStyle="bold"
        android:text="@string/AddSessionField"
        android:id="@+id/AddNewSession" />

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:textSize="25dp"
            android:text="Subject: "
            android:id="@+id/NewSubjectTex"/>

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="horizontal">

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:id="@+id/subjectEdit"
            android:hint="@string/SubjectField" />

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:textSize="25dp"
            android:text="Description: "
            android:id="@+id/NewDescriptionTex"/>

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="horizontal">

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:id="@+id/descriptionEdit"
            android:hint="@string/DescriptionField" />

    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/newImage"
        android:layout_weight=".75" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:id="@+id/takePhotoButton"
        android:text="Take Photo" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="Add Location"
        android:id="@+id/AddLocationButton" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:id="@+id/saveButton"
        android:text="@string/SaveButton" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:id="@+id/cancelAddSession"
        android:text="@string/CancelButton" />

</LinearLayout>