<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation = "vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/saveNewSession">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textAlignment="center"
        android:textSize="25dp"
        android:textStyle="bold"
        android:text="@string/EditSessionField"
        android:id="@+id/AddNewSession" />

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:textSize="25dp"
            android:text="Subject: " />

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="horizontal">

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:id="@+id/subjectEdit"
            android:hint="@string/SubjectField" />

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:textSize="25dp"
            android:text="Description: " />

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="horizontal">

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:id="@+id/descriptionEdit"
            android:hint="@string/DescriptionField" />

    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editImageView"
        android:layout_weight="0.75" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="New Photo"
            android:id="@+id/newPhotoButton"
            android:layout_weight="1"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Delete Photo"
            android:id="@+id/deletePhotoButton"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="New Location"
            android:id="@+id/newLocationButton"
            android:layout_weight="1" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Delete Location"
            android:id="@+id/deleteLocationButton"
            android:layout_weight="1" />

    </LinearLayout>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/SaveButton"
        android:id="@+id/saveButton" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/CancelButton"
        android:id="@+id/cancelEditSession" />

</LinearLayout>